# vericoding

./: .copilot-instructions.md  .copilotignore  .coveragerc  .env.bak.20250828-034350  .gitignore  .mcp.json  1M_TOKEN_ENHANCEMENT_PLAN.md  CHANGELOG.md  CLAUDE.md  CLAUDE_DAFNY.md  COVERAGE_INTEGRATION_SUMMARY.md  Justfile  LATEST_2025_MODELS.md  Main.lean  OPENROUTER_MODELS.md  PROVIDER_MODELS_2025.md  PR_DESCRIPTION.md  README.md  README_LLM_PROVIDERS.md  README_unified_spec_to_code.md  REFACTORING_SUMMARY.md  TODO.md  TRANSLATION_CLEANUP_SUMMARY.md  Vericoding.lean  check_generated_code.py  cleanup_yaml_tags.py  config.yml  convert_from_yaml.py  convert_to_vc_template.py  correct_binary_search.lean  create_category_imports.sh  generate_and_save_hoare_code.py  generate_code_from_hoare_specs.py  generate_coverage.sh  generate_hoare_code_direct.py  generate_yaml_from_lean.py  lake-manifest.json  lakefile.lean  migrate_to_unified.sh  numpy_functions_analysis.md  (+24 more)
.cursor/: mcp.json
.github/: copilot-instructions.md
.jjconflict-base-0/: .gitignore  .mcp.json  lake-manifest.json  lakefile.lean
.jjconflict-side-1/: CLAUDE.md
DafnyBenchSpecs/: IsEven.lean  Max.lean  OnlineMax.lean  Shuffle.lean  SwapInArray.lean
all_hoare_specs/: Numpy_Exp.lean  Numpy_Split.lean  Numpy_Transpose.lean  array_creation_frombuffer.lean  array_creation_triu.lean  array_manipulation_copyto.lean  bitwise_operations_invert.lean  chebyshev_chebdiv.lean  fft_ifft2.lean  hermite_e_hermeroots.lean  hermite_hermpow.lean  indexing_slicing_tril.lean  logic_functions_array_equiv.lean  mathematical_functions_log10.lean  polynomial_polyfromroots.lean  polynomial_polyval.lean  polynomial_polyvander2d.lean  strings_equal.lean  strings_greater.lean  strings_partition.lean
benchmarks/: README.md  dafny_issues.csv  dafny_issues.jsonl  dafny_tasks.csv  dafny_tasks.jsonl  generated_metadata.json  lean_issues.csv  lean_issues.jsonl  tasks_metadata.csv  tasks_metadata.json  tasks_metadata.jsonl  verus_issues.csv  verus_issues.jsonl  verus_tasks.csv  verus_tasks.jsonl
code2verus/: CLAUDE.md  CLAUDE_LEAN.md  DEBUG_GUIDE.md  README.md  config.yml  download_verina_dataset.py  transpilation_analysis_lean_verus.md
code_from_spec_1m_on_17-08_15h47/: aatmp.lean
config/: language_config.toml  language_config.yaml
dafny/: README.md  README_MODULAR.md  prompts_spec.yaml  prompts_specvibe.yaml  spec_to_code.py  vericode_parser.py  vericode_printer.py  vericoder.py
lean-vc/NumpySpec/: .cursorrules  .gitignore  .mcp.json  CHANGELOG.md  DafnySpecs.lean  FuncTracker.lean  LEANEXPLORE_LOCAL_SETUP.md  Main.lean  NDArray.lean  README.md  demo_leanexplore_local.py  install.sh  lakefile.lean  pyproject.toml  test_abs.lean
lean-vc/NumpySpec/.claude/commands/: commitpush.md
lean-vc/NumpySpec/.cursor/rules/: chain-of-recursive-thoughts.mdc  data-pipeline-updates.mdc  jaxtyping-shapes.mdc  lean-advice.mdc  lean-guillemets.mdc  lean-syntax-tower.mdc  python-ruff.mdc
lean-vc/NumpySpec/.githooks/: pre-commit
lean-vc/NumpySpec/.github/workflows/: ci.yml  claude-code-review.yml
lean-vc/NumpySpec/DafnySpecs/: CLAUDE.md  NpCumProd.lean  NpCumSum-spec.lean  NpGreater-spec.lean  NpMultiply-spec.lean  NpSum.lean  NpWhere-spec.lean
lean-vc/NumpySpec/DafnySpecs/code_from_spec_on_02-07_22h19_pid1845/: NpFloorDivide_temp.lean
lean-vc/NumpySpec/DafnySpecs/code_from_spec_on_02-07_22h22_pid1956/debug/: NpFloorDivide_iter1_pre_verify.lean  NpFloorDivide_iter3_pre_verify.lean
lean-vc/NumpySpec/DafnySpecs/code_from_spec_on_02-07_22h26_pid2102/: NpArange_temp.lean  NpGreater_temp.lean  NpLcm_temp.lean  NpSum_temp.lean
lean-vc/NumpySpec/DafnySpecs/code_from_spec_on_02-07_22h26_pid2102/debug/: NpAdd_iter10_pre_verify.lean  NpAdd_iter7_pre_verify.lean  NpAdd_iter8_pre_verify.lean  NpArange_iter0_initial.lean  NpArange_iter5_pre_verify.lean  NpArange_iter6_pre_verify.lean  NpArange_iter7_pre_verify.lean  NpArange_iter8_pre_verify.lean  NpArange_iter9_pre_verify.lean  NpBitwiseOr_iter1_pre_verify.lean  NpBitwiseOr_iter2_pre_verify.lean  NpFloorDivide_iter3_pre_verify.lean  NpGreater_iter3_pre_verify.lean  NpLcm_iter2_pre_verify.lean  NpLcm_iter4_pre_verify.lean  NpLcm_iter5_pre_verify.lean  NpLcm_iter8_pre_verify.lean  NpNotEqual_iter0_initial.lean  NpNotEqual_iter2_pre_verify.lean  NpProd_iter0_initial.lean  NpProd_iter3_pre_verify.lean  NpProd_iter6_pre_verify.lean  NpSign_iter2_pre_verify.lean  NpSign_iter3_pre_verify.lean  NpSign_iter4_pre_verify.lean  NpSign_iter5_pre_verify.lean  NpSum_iter3_pre_verify.lean  NpSum_iter4_pre_verify.lean  NpSum_iter6_pre_verify.lean  NpWhere_iter2_pre_verify.lean
lean-vc/NumpySpec/DafnySpecs/dafny/: np_abs.dfy  np_not_equal.dfy
lean-vc/NumpySpec/FuncTracker/: BasicV2.lean  BoxDrawing.lean  CLAUDE.md  CodeActions.lean  Demo2D.lean  Demo2DAdvanced.lean  Demo2DComplete.lean  DemoTrueNative2D.lean  DemoValidation.lean  DirectElab.lean  GridParserV2.lean  GridParserV3.lean  Maze.lean  Native2D.lean  NativeSyntax.lean  PredicateExamples.lean  PrettyFormat.lean  RegionPredicates.lean  SimpleValidation.lean  SpatialParser.lean  TwoDSyntax.lean  VersoIntegration.lean
lean-vc/NumpySpec/NDArray/: README.md  Test.lean
lean-vc/NumpySpec/NumpySpec/: BignumArraySimple.lean  Constants.lean  DafnyBenchmarks.lean
lean-vc/NumpySpec/docs/: TacticProgrammingGuide.lean  grw-tactic-notes.md  lakefile-lean-migration.md
lean-vc/NumpySpec/src/numpyspec/: __init__.py
lean-vc/NumpySpec/src/numpyspec/data/constants/: data.json  numpy_constants.lean  numpy_constants.py  numpy_e_spec.lean
lean-vc/NumpySpec/src/numpyspec/models/: __init__.py
lean-vc/NumpySpec/src/numpyspec/pipeline/: __init__.py  model.py  verifier.py
lean-vc/NumpySpec/tests/: __init__.py  test_placeholder.py
src/code2verus/: .gitignore  README.md  __init__.py  __main__.py  agent.py  config.py  download_verina_dataset.py  processing.py  pyproject.toml  tools.py  verification.py
src/code2verus/config/: base.yml  lean-to-verus.yml
src/code2verus/src/code2verus/: agent.py  processing.py  verification.py
src/code2verus/tests/: README.md
(+173622 files in other folders)
