[project]
#name = "vericoding-lean"
name = "vericoding"
version = "0.1.0"
description = "Lean 4 verification experiment framework"
authors = [
    { name = "Anonymous Author", email = "anonymous@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.58.2",
    "claude-code-sdk>=0.0.16",
    "wandb>=0.21.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.2", # Keep for backward compatibility during migration
    "python-dotenv>=1.0.0", # For easier .env file loading
    "tomli>=1.2.0; python_version<'3.11'", # TOML parsing for Python < 3.11
    "GitPython>=3.1.0", # Git operations
    "pandas>=2.3.1",
    "dataclasses-json>=0.6.7", # JSON serialization for dataclasses
    "tqdm>=4.67.1",
    "ruamel-yaml>=0.18.15",
    "openai>=1.104.2",
    "datasets>=4.0.0",
    "pytest>=8.4.1",
    "matplotlib>=3.10.6",
    "natsort>=8.4.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
vector = [
    "sentence-transformers>=2.2.2",
    "scikit-learn>=1.3.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.21.0",
]
all = [
    "openai>=1.0.0",
    "sentence-transformers>=2.2.2",
    "scikit-learn>=1.3.0",
    "faiss-cpu>=1.7.4",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "psutil>=5.9.0",
]
dev = [
    "ruff>=0.1.0",
]

[project.scripts]
vericode-lean = "vericoding.lean.spec_to_code_lean:main"
fvapps-to-yaml = "fvapps_2_yaml:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.10",
    "wandb>=0.21.0",
]
